<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainMenu"
    android:gravity="bottom"
    android:orientation="vertical">

    <Button
        android:id="@+id/Button_Start"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Button_Start" />

    <Button
        android:id="@+id/Button_Settings"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Button_Settings" />

    <Button
        android:id="@+id/Button_Libary"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/Button_Library" />
</LinearLayout>